[package]
name = "intensive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "database-server"
path = "src/database_server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "database-client"
path = "src/main.rs"

[dependencies]
schema = { path = "./schema" }
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4.0"
parking_lot = "0.12.1"
rand = "0.8.5"
futures = "0.3.25"

[build-dependencies]
tonic-build = "0.8"


[workspace]
members = [
    "schema",
]
